[package]
name = "benchmarks"
version = "0.0.1"
authors = ["Martin Junghanns <martin.junghanns@neo4j.com>"]
edition = "2018"
workspace = ".."
publish = false

[dependencies]
dual-iso = { path = ".." }
rand = { version = "0.7.3", features = ["small_rng"] }

[dev-dependencies]
criterion = "0.3.3"

[[bench]]
name = "dual_iso_benchmark"
harness = false
